2013-09-03 Harri Pitkänen <hatapitk@iki.fi>
	* Internally standard and unspecified variant are not the same.

2013-08-21 Harri Pitkänen <hatapitk@iki.fi>
	* Improve Java API for distribution through Maven Central Repository.
	* Fix test suite to work with latest Automake releases.
	* Increase version numbers for 3.6.1.

2013-07-23 Harri Pitkänen <hatapitk@iki.fi>
	* Add option accept_all_uppercase to voikkospell.
	* Improve capitalization of suggestions.

2013-07-11 Harri Pitkänen <hatapitk@iki.fi>
	* Disable voikkovfstc by default since VFST is still experimental.

2013-04-08 Harri Pitkänen <hatapitk@iki.fi>
	* Add replacement suggestion ä->e.

2013-03-17 Harri Pitkänen <hatapitk@iki.fi>
	* Private use subtag is now always returned, default is
	  "standard". This will make it easier to deal with language
	  variants in applications.

2013-03-16 Harri Pitkänen <hatapitk@iki.fi>
	* Support for ZHFST spellers is no longer experimental.

2012-08-22 Harri Pitkänen <hatapitk@iki.fi>
	* Add support for using Python 3 (and drop support for using
	  Python < 2.6) as build tool.

2012-08-20 Harri Pitkänen <hatapitk@iki.fi>
	* Add simple VFST speller implementation.

2012-08-14 Harri Pitkänen <hatapitk@iki.fi>
	* Improve word splitting suggestions near capitalized words or
	  end of sentence.

2012-08-04 Harri Pitkänen <hatapitk@iki.fi>
	* mmap may be available even if getpwuid_r is not.
	* Add option --disable-buildtools

2012-08-03 Harri Pitkänen <hatapitk@iki.fi>
	* Support building without hardcoded DICTIONARY_PATH.

2012-08-01 Harri Pitkänen <hatapitk@iki.fi>
	* Support homonyms for verb negatives.

2012-06-18 Harri Pitkänen <hatapitk@iki.fi>
	* Fix false positives from extra verb check.
	* Update version numbers for 3.5.

2012-05-14 Harri Pitkänen <hatapitk@iki.fi>
	* Check for extra main verbs.

2012-05-01 Harri Pitkänen <hatapitk@iki.fi>
	* Codepoints in Latin Extended-B block are letters.

2012-04-01 Harri Pitkänen <hatapitk@iki.fi>