@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH VOIKKOSPELL 1 "2013-07-23"
+.TH VOIKKOSPELL 1 "2013-10-08"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -74,6 +74,9 @@ spaces in them are not printed.
 .B \-l
 Prints a list of available dictionary variants and exits. The first variant
 is the default to be used when no specific variant has been requested.
+.TP
+.B \-L
+Prints a list of capabilities and languages for which these capabilities are supported.
 .TP
 .BI ignore_nonwords= n
 .TP
